# taplist

./: .gitignore  LICENSE  README  vercel.json
api/: Cargo.toml
frontend/: Cargo.toml  README  index.html  vercel.json
frontend/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
