[package]
name = "taplist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2"
js-sys = "0.3.61"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.61"
yew = { version = "0.20", features = ["csr"] }
